--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <div>
         <form>
-          <label>宽度：</label>
+          <label for="width">宽度：</label>
           <input id="width" type="number" min=0 max=100 step=1 required autofocus>
-          <span class='span1'></span><br/>
-          <label>高度：</label>
-          <input id="height" type='number' min=0 max=100 step=1 required>
-          <span class='span1'></span>
+          <span class="span1"></span><br/>
+          <label for="height">高度：</label>
+          <input id="height" type="number" min=0 max=100 step=1 required>
+          <span class="span1"></span>
           <br/>
-          <input id='calculate' type='button' value='计算'/><br/>
+          <input id="calculate" type="button" value="计算"/><br/>
           <label>周长：</label>
-          <input id='perimeter' type='test' disabled><br/>
+          <input id="perimeter" type="test" disabled><br/>
           <label>面积：</label>
-          <input id='area' type='test' disabled>
+          <input id="area" type="test" disabled>
         </form>
     </div>
   <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
